--- a/src/resource/file.scss
+++ b/src/resource/file.scss
@@ -1,44 +1,51 @@
-.file-collection {
-  width: 100%;
-  padding-left: 0.6rem;
-  padding-right: 0.6rem; }
-  .file-collection > :not(:last-child) {
-    margin-bottom: 0.6rem; }
-
 .file {
   display: inline-flex;
   align-self: start;
+
   background-color: #f5f5f5;
   font-size: .875rem;
   border-radius: 5px;
   border: 1px solid transparent;
   font-weight: bold;
+
   padding: 4px 4px 4px 8px;
-  white-space: nowrap; }
-  .file a {
+
+  white-space: nowrap;
+
+  a {
     color: #15c;
     float: left;
     padding: 0 8px 0 0;
-    text-decoration: none; }
-  .file .name {
+    text-decoration: none;
+  }
+
+  .name {
     display: inline-block;
     overflow: hidden;
     padding: 3px 0;
     text-overflow: ellipsis;
     vertical-align: bottom;
     white-space: nowrap;
-    max-width: 315px; }
-  .file .size {
+    max-width: 315px;
+  }
+
+  .size {
     color: #777;
     display: inline-block;
-    padding: 3px 0; }
-  .file .remove {
+    padding: 3px 0;
+  }
+
+  .remove {
     cursor: pointer;
     height: 20px;
     width: 20px;
     margin-top: 1px;
-    opacity: .5; }
+    opacity: .5;
+  }
+}
 
+// For the dropdown button masquerading as a file, add caret
+// after the "size" (attachment count)
 button.file > .size::after {
   display: inline-block;
   margin-left: .255em;
@@ -47,4 +54,5 @@ button.file > .size::after {
   border-top: .3em solid;
   border-right: .3em solid transparent;
   border-bottom: 0;
-  border-left: .3em solid transparent; }
+  border-left: .3em solid transparent;
+}
